
=== version history of XML::Compile::SOAP::Daemon

TODO:
  . trace incoming and outgoing messages server-side

version 3.15:

	Fixes:
	- ::CGI respect nph for sending WSDLs [Immo Goltz]

version 3.14: Fri May 11 01:04:19 CEST 2018

	Improvements:
	- convert to GIT and GitHub

version 3.13: Thu  2 Nov 09:14:23 CET 2017

	Fixes:
	- change of exception output in Log::Report [cpantesters]

version 3.12: Fri 13 May 21:21:11 CEST 2016

	Fixes:
	- test for availability of CGI.pm [cpantesters]
	  rt.cpan.org#114366 [Slaven Rezic]

	Improvements:
	- add example of basic-auth in Plack to ::PSGI
	  [Emeline Thibault]

version 3.11: Wed Jan 14 10:22:53 CET 2015

	Fixes:
	- ::Daemon::AnyDaemon calculation of request timeout

version 3.10: Wed Nov 26 08:45:03 CET 2014

	Fixes:
	- please Perl 5.20.1 change of import score in regression test
	  [cpantesters]

version 3.09: Wed May 28 09:26:56 CEST 2014

	Fixes:
	- ::AnyDaemon warning on use of connection timout (expires)
	- t/wsa.t use of constants with perl 5.18.2 [cpantesters]

	Improvements:
	- faultNotImplemented called as instance method.
	- change documentation style.
	- ::Daemon::CGI support for fcgi, only needs run(nph => 0) [Immo]
	- request for ?wsdl now case insensitive
	- improve example/any-daemon script

version 3.08: Wed Jan  8 00:56:28 CET 2014

	Fixes:
	- depend on new XML::Compile::WSDL11 [cpantesters]

version 3.07: Mon Jan  6 23:19:49 CET 2014

	Fixes:
	- ::AnyDaemon fix parameters [Theo Bot]
	- adapt to changes in XML::Compile::SOAP.
	  rt.cpan.org#91900 [Raffeallo Galli]

	Improvements:
	- use parent, to replace use base.
	- ::setWsdlResponse() now can have mime-type parameter

version 3.06: Fri May  3 10:07:33 CEST 2013

	Improvements:
	- ::CGI configuration example for Apache VirtualHost
	  [Dan Lyke]

version 3.05: Thu Aug 16 00:22:31 CEST 2012

	Fixes:
	- various minor improvements to the new ::PSGI backend.
	  [Piotr Roszatycki]

	Improvements:
	- additional regression test for psgi.