@@ -9,6 +9,10 @@ version 3.15:
 	Fixes:
 	- ::CGI respect nph for sending WSDLs [Immo Goltz]
 
+	Improvements:
+	- operationsFromWSDL() passes all kinds of compilation parameters
+	  to ::SOAP*::compileHandler()  GitHub issue 3 [MadLord80]
+
 version 3.14: Fri May 11 01:04:19 CEST 2018
 
 	Improvements:
